--- a/colorlib.html
+++ b/colorlib.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jovitos colorlib ND</title>
-    <link rel="stylesheet" href="assets/css/colorlib" />
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/colorlib.css" />
+  </head>
+  <body>
+    <section class="header-area">
+      <div class="container-header">
+        <div class="logo-img">
+          <img src="assets/img/index.png" alt="logo" />
+        </div>
+        <div class="menu-list">
+          <li>home</li>
+          <li>about</li>
+          <li>services</li>
+          <li>portfolio</li>
+          <li>pricing</li>
+          <li>blog</li>
+          <li>pages</li>
+          <li>contact</li>
+        </div>
+      </div>
+    </section>
+    <section class="baner-area">
+      <div class="container-baner">
+        <div class="container-element">
+          <div class="baner-description">
+            <h6>This is me</h6>
+            <h1>Philip Gilbert</h1>
+            <p>
+              You will begin to realise why this exercise is called the Dickens
+              Pattern with reference to the ghost showing Scrooge some different
+              futures.
+            </p>
+            <div class="baner-button"> 
+               <a href="#">discover now</a>
+            </div>
+          </div>
+          <div class="baner-img">
+            <img src="assets/img/hero-img.png.webp" alt="baner-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
