--- a/colorlib.html
+++ b/colorlib.html
@@ -19,14 +19,32 @@
           <img src="assets/img/index.png" alt="logo" />
         </div>
         <div class="menu-list">
-          <li>home</li>
-          <li>about</li>
-          <li>services</li>
-          <li>portfolio</li>
-          <li>pricing</li>
-          <li>blog</li>
-          <li>pages</li>
-          <li>contact</li>
+          <ul class="menu-list-align">
+            <li>
+              <a href="#">home</a>
+            </li>
+            <li>
+              <a href="#">about</a>
+            </li>
+            <li>
+              <a href="#">services</a>
+            </li>
+            <li>
+              <a href="#">portfolio</a>
+            </li>
+            <li>
+              <a href="#">pricing</a>
+            </li>
+            <li>
+              <a href="#">blog</a>
+            </li>
+            <li>
+              <a href="#">pages</a>
+            </li>
+            <li>
+              <a href="#">content</a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -41,8 +59,29 @@
               Pattern with reference to the ghost showing Scrooge some different
               futures.
             </p>
-            <div class="baner-button"> 
-               <a href="#">discover now</a>
+            <div class="baner-button">
+              <a href="#">discover now</a>
+            </div>
+          </div>
+          <div class="baner-img">
+            <img src="assets/img/hero-img.png.webp" alt="baner-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="baner-area">
+      <div class="container-baner">
+        <div class="container-element">
+          <div class="baner-description">
+            <h6>This is me</h6>
+            <h1>Philip Gilbert</h1>
+            <p>
+              You will begin to realise why this exercise is called the Dickens
+              Pattern with reference to the ghost showing Scrooge some different
+              futures.
+            </p>
+            <div class="baner-button">
+              <a href="#">discover now</a>
             </div>
           </div>
           <div class="baner-img">
