sub-menu problem

--- a/colorlib.html
+++ b/colorlib.html
@@ -19,7 +19,7 @@
           <img src="assets/img/index.png" alt="logo" />
         </div>
         <div class="menu-list">
-          <ul class="menu-list-align">
+          <ul>
             <li>
               <a href="#">home</a>
             </li>
@@ -38,6 +38,14 @@
             <li>
               <a href="#">blog</a>
             </li>
+            <ul class="sub-menu">
+              <li>
+                <a href="#">blog home</a>
+              </li>
+              <li>
+                <a href="#">blog single</a>
+              </li>
+            </ul>
             <li>
               <a href="#">pages</a>
             </li>
