--- a/05-26.html
+++ b/05-26.html
@@ -11,16 +11,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/05-26.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
   </head>
      <body>
-        <!-- Meniu juosta -->
+        <!-- Meniu start -->
         <section class="header-area">
           <div class="container-header">
+            <div class="header-row">     
             <div class="logo-img">
               <img src="assets/img/index.png" alt="logo" />
             </div>
-            <div class="menu-list">
-              <ul>
+            <div class="menu-container">
+              <ul class="menu-list">
                 <li>
                   <a href="#">home</a>
                 </li>
@@ -36,19 +41,23 @@
                 <li>
                   <a href="#">pricing</a>
                 </li>
-                <li>
-                  <a href="#">blog</a>
-                  <ul class="sub-menu">
-                    <li>
-                      <a href="#">blog home</a>
-                    </li>
-                    <li>
-                      <a href="#">blog single</a>
-                    </li>
-                  </ul>
+                <li class="dropdown">
+                  <a href="#" class="blog-active">blog <i class="las la-angle-down"></i></a>
+                  <div class="sub-menu">
+                    <a href="#">blog home</a>
+                    <a href="#">blog single</a>
+                  </div>
                 </li>
-                  <li>
-                  <a href="#">pages</a>
+                  <li class="dropdown">
+                  <a href="#">pages <i class="las la-angle-down"></i></a>
+                  <div class="sub-menu">
+                    <a href="#">Elements</a>
+                    <a href="#">Level2 <i class="las la-angle-down"></i></a>
+                  <div class="sub-sub-menu">
+                    <a href="#">Item One</a>
+                    <a href="#">Item Two</a>
+                  </div>
+                  </div>
                 </li>
                 <li>
                   <a href="#">content</a>
@@ -56,7 +65,11 @@
               </ul>
             </div>
           </div>
+        </div>
         </section>
+        <!-- Meniu end -->
+
+      <!-- Baner start -->
         <section class="baner-area">
         
         <h1>
@@ -71,5 +84,6 @@
           </div>
 
         </section>
+        <!-- Baner end -->
   </body>
 </html>
