--- a/05-26.html
+++ b/05-26.html
@@ -16,74 +16,96 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
   </head>
-     <body>
-        <!-- Meniu start -->
-        <section class="header-area">
-          <div class="container-header">
-            <div class="header-row">     
-            <div class="logo-img">
-              <img src="assets/img/index.png" alt="logo" />
-            </div>
-            <div class="menu-container">
-              <ul class="menu-list">
-                <li>
-                  <a href="#">home</a>
-                </li>
-                <li>
-                  <a href="#">about</a>
-                </li>
-                <li>
-                  <a href="#">services</a>
-                </li>
-                <li>
-                  <a href="#">portfolio</a>
-                </li>
-                <li>
-                  <a href="#">pricing</a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="blog-active">blog <i class="las la-angle-down"></i></a>
-                  <div class="sub-menu">
-                    <a href="#">blog home</a>
-                    <a href="#">blog single</a>
-                  </div>
-                </li>
-                  <li class="dropdown">
-                  <a href="#">pages <i class="las la-angle-down"></i></a>
-                  <div class="sub-menu">
-                    <a href="#">Elements</a>
-                    <a href="#">Level2 <i class="las la-angle-down"></i></a>
+  <body>
+    <!-- Meniu start -->
+    <section class="header-area">
+      <div class="container-header">
+        <div class="header-row">
+          <div class="logo-img">
+            <img src="assets/img/index.png" alt="logo" />
+          </div>
+          <div class="menu-container">
+            <ul class="menu-list">
+              <li>
+                <a href="#">home</a>
+              </li>
+              <li>
+                <a href="#">about</a>
+              </li>
+              <li>
+                <a href="#">services</a>
+              </li>
+              <li>
+                <a href="#">portfolio</a>
+              </li>
+              <li>
+                <a href="#">pricing</a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="blog-active"
+                  >blog <i class="las la-angle-down"></i
+                ></a>
+                <div class="sub-menu">
+                  <a href="#">blog home</a>
+                  <a href="#">blog single</a>
+                </div>
+              </li>
+              <li class="dropdown">
+                <a href="#">pages <i class="las la-angle-down"></i></a>
+                <div class="sub-menu">
+                  <a href="#">Elements</a>
+                  <a href="#">Level2 <i class="las la-angle-down"></i></a>
                   <div class="sub-sub-menu">
                     <a href="#">Item One</a>
                     <a href="#">Item Two</a>
                   </div>
-                  </div>
-                </li>
-                <li>
-                  <a href="#">content</a>
-                </li>
-              </ul>
+                </div>
+              </li>
+              <li>
+                <a href="#">content</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Meniu end -->
+
+    <!-- Baner start -->
+    <section class="baner-area">
+      <div class="baner-container">
+        <div class="background-img">
+          <div class="background-overlay">
+            <div class="baner-content">
+              <h1>Dude You’re Getting a Telescope</h1>
+              <p>
+                There is a moment in the life of any aspiring astronomer that it
+                is time to buy that first
+              </p>
+              <div class="baner-button">
+                <a href="#">discover now</a>
+              </div>
             </div>
           </div>
         </div>
-        </section>
-        <!-- Meniu end -->
-
-      <!-- Baner start -->
-        <section class="baner-area">
-        
-        <h1>
-            Dude You’re Getting a Telescope 
-        </h1>
-        <p>
-            There is a moment in the life of any aspiring astronomer that it is time to buy that first 
-        </p>
-       
-         <div class="baner-button">
-            <a href="#">discover now</a>
+      </div>
+    </section>
+    <!-- Baner end -->
+    <!-- top category start -->
+    <section class="top-category-area">
+      <div class="top-category-container">
+        <div class="top-category-row">
+          <div class="social-life-img">
+            <a href="assets/img/top-category-area-1.webp"></a>
           </div>
-
-        </section>
-        <!-- Baner end -->
+          <div class="politics-img">
+            <a href="assets/img/top-category-area-2.webp"></a>
+          </div>
+          <div class="food-img">
+            <a href="assets/img/top-category-area-3.webp"></a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
