--- a/05-26.html
+++ b/05-26.html
@@ -91,21 +91,54 @@
       </div>
     </section>
     <!-- Baner end -->
-    <!-- top category start -->
-    <section class="top-category-area">
-      <div class="top-category-container">
-        <div class="top-category-row">
-          <div class="social-life-img">
-            <a href="assets/img/top-category-area-1.webp"></a>
-          </div>
-          <div class="politics-img">
-            <a href="assets/img/top-category-area-2.webp"></a>
-          </div>
-          <div class="food-img">
-            <a href="assets/img/top-category-area-3.webp"></a>
+
+
+    <div class="main-container">
+
+      <div class="top-category-widget-box">
+
+        <a href="#">
+        <div class="widget-card">
+          <div class="card-image card-image-1"></div>
+
+          <div class="widget-card__overlay"></div>
+
+          <div class="text-on__widget-card">            
+              <h3>Social life</h3>
+              <hr />
+              <p>Enjoy your social life together</p>            
           </div>
         </div>
-      </div>
+        </a>
+  
+        <a href="#">
+        <div class="widget-card">
+          <div class="card-image card-image-2"></div>
+
+          <div class="widget-card__overlay"></div>
+
+          <div class="text-on__widget-card">
+
+              <h3>Politics</h3>
+              <hr />
+              <p>Be a part of politics</p>            
+          </div>
+        </div>
+      </a>
+        <a href="#">
+        <div class="widget-card">
+          <div class="card-image card-image-3"></div>
+
+          <div class="widget-card__overlay"></div>
+
+          <div class="text-on__widget-card">            
+              <h3>Food</h3>
+              <hr />
+              <p>Let the food be finished</p>
+          </div>
+        </div>
+        </a>
+       </div>
     </section>
   </body>
 </html>
