--- a/05-26.html
+++ b/05-26.html
@@ -17,7 +17,6 @@
     />
   </head>
   <body>
-    <!-- Meniu start -->
     <section class="header-area">
       <div class="container-header">
         <div class="header-row">
@@ -69,9 +68,6 @@
         </div>
       </div>
     </section>
-    <!-- Meniu end -->
-
-    <!-- Baner start -->
     <section class="baner-area">
       <div class="baner-container">
         <div class="background-img">
@@ -90,55 +86,172 @@
         </div>
       </div>
     </section>
-    <!-- Baner end -->
-
-
-    <div class="main-container">
-
+    <section class="main-container">
       <div class="top-category-widget-box">
-
         <a href="#">
-        <div class="widget-card">
-          <div class="card-image card-image-1"></div>
-
-          <div class="widget-card__overlay"></div>
-
-          <div class="text-on__widget-card">            
+          <div class="widget-card">
+            <div class="card-image card-image-1"></div>
+            <div class="widget-card__overlay"></div>
+            <div class="text-on__widget-card">
               <h3>Social life</h3>
               <hr />
-              <p>Enjoy your social life together</p>            
+              <p>Enjoy your social life together</p>
+            </div>
           </div>
-        </div>
         </a>
-  
         <a href="#">
-        <div class="widget-card">
-          <div class="card-image card-image-2"></div>
-
-          <div class="widget-card__overlay"></div>
-
-          <div class="text-on__widget-card">
-
+          <div class="widget-card">
+            <div class="card-image card-image-2"></div>
+            <div class="widget-card__overlay"></div>
+            <div class="text-on__widget-card">
               <h3>Politics</h3>
               <hr />
-              <p>Be a part of politics</p>            
+              <p>Be a part of politics</p>
+            </div>
           </div>
-        </div>
-      </a>
+        </a>
         <a href="#">
-        <div class="widget-card">
-          <div class="card-image card-image-3"></div>
-
-          <div class="widget-card__overlay"></div>
-
-          <div class="text-on__widget-card">            
+          <div class="widget-card">
+            <div class="card-image card-image-3"></div>
+            <div class="widget-card__overlay"></div>
+            <div class="text-on__widget-card">
               <h3>Food</h3>
               <hr />
               <p>Let the food be finished</p>
+            </div>
           </div>
-        </div>
         </a>
-       </div>
+      </div>
     </section>
+    <section class="post-content-area">
+      <div class="container">
+        <div class="row">
+          <div class="left-col post-list">
+            <div class="single-post-row">
+              <div class="col-details">
+                <ul class="tags">
+                  <li>
+                    <a href="#">Food,</a>
+                  </li>
+                  <li>
+                    <a href="#">Technology,</a>
+                  </li>
+                  <li>
+                    <a href="#">Politics,</a>
+                  </li>
+                  <li>
+                    <a href="#">Lifestyle</a>
+                  </li>
+                </ul>
+                <div class="user-details-row">
+                  <p class="user-name">
+                    <a href="#">Mark Wiens</a>
+                    <span class="lnr user-icon"></span>
+                  </p>
+                  <p class="date">
+                    <a href="#">01 Jun, 2021</a>
+                    <span class="lnr date-icon"></span>
+                  </p>
+                  <p class="wiev">
+                    <a href="#">1.2M Wievs</a>
+                    <span class="lnr wiev-icon"></span>
+                  </p>
+                  <p class="comment">
+                    <a href="#">10 Comments</a>
+                    <span class="lnr comment-icon"></span>
+                  </p>
+                </div>
+                <div class="img-with-description">
+                  <div class="img-feature">
+                    <img src="assets/img/feature-img1.jpg.webp" alt="img-feature">
+                  </div>
+                    <a class="img-posts-title" href="#">
+                      <h3>Astronomy Binoculars A Great Alternative</h3>
+                    </a>
+                    <p class="img-posts">
+                      MCSE boot camps have its supporters and its detractors. 
+                      Some people do not understand why you should have to 
+                      spend money on boot camp when you can get the MCSE study 
+                      materials yourself at a fraction.
+                    </p>
+                    <a href="#" class="primary-btn">View More</a>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+    </section>
+    <!-- bandymas kitaip -->
+    <section class="post-content-area">
+      <div class="container">
+        <div class="row">
+          <div class="left-center-">
+            <div class="single-post-row">
+              <div class="col-details">
+                <ul class="tags">
+                  <li>
+                    <a href="#">Food,</a>
+                  </li>
+                  <li>
+                    <a href="#">Technology,</a>
+                  </li>
+                  <li>
+                    <a href="#">Politics,</a>
+                  </li>
+                  <li>
+                    <a href="#">Lifestyle</a>
+                  </li>
+                </ul>
+                <div class="user-details-row">
+                  <p class="user-name">
+                    <a href="#">Mark Wiens</a>
+                    <span class="lnr user-icon"></span>
+                  </p>
+                  <p class="date">
+                    <a href="#">01 Jun, 2021</a>
+                    <span class="lnr date-icon"></span>
+                  </p>
+                  <p class="wiev">
+                    <a href="#">1.2M Wievs</a>
+                    <span class="lnr wiev-icon"></span>
+                  </p>
+                  <p class="comment">
+                    <a href="#">10 Comments</a>
+                    <span class="lnr comment-icon"></span>
+                  </p>
+                </div>
+                <div class="img-with-description">
+                  <div class="img-feature">
+                    <img src="assets/img/feature-img1.jpg.webp" alt="img-feature">
+                  </div>
+                    <a class="img-posts-title" href="#">
+                      <h3>Astronomy Binoculars A Great Alternative</h3>
+                    </a>
+                    <p class="img-posts">
+                      MCSE boot camps have its supporters and its detractors. 
+                      Some people do not understand why you should have to 
+                      spend money on boot camp when you can get the MCSE study 
+                      materials yourself at a fraction.
+                    </p>
+                    <a href="#" class="primary-btn">View More</a>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+    </section>
+
   </body>
 </html>
