su destytojo korekcijom

--- a/05-26.html
+++ b/05-26.html
@@ -42,9 +42,7 @@
                 <a href="#">pricing</a>
               </li>
               <li class="dropdown">
-                <a href="#" class="blog-active"
-                  >blog <i class="las la-angle-down"></i
-                ></a>
+                <a href="#" class="blog-active">blog <i class="las la-angle-down"></i></a>
                 <div class="sub-menu">
                   <a href="#">blog home</a>
                   <a href="#">blog single</a>
@@ -124,7 +122,7 @@
         </a>
       </div>
     </section>
-
+  
     <section class="post-content-area">
       <div class="bottom-container">
         <div class="row">
@@ -134,223 +132,210 @@
                 <div class="left-center">
                   <div class="cards">
                     <div class="left-area">
-                   <ul class="tags">
-                     <li>
-                       <a href="#">Food,</a>
-                     </li>
-                     <li>
-                       <a href="#">Technology,</a>
-                     </li>
-                     <li>
-                       <a href="#">Politics,</a>
-                     </li>
-                     <li>
-                       <a href="#">Lifestyle</a>
-                     </li>
-                   </ul>
- 
-                   <div class="user-details-row">
-                     <p class="user-name">
-                       <a href="#">Mark Wiens</a>
-                       <i class="las la-user"></i>
-                     </p>
-                     <p class="date">
-                       <a href="#">01 Jun, 2021</a>
-                       <span class="lnr date-icon"></span>
-                     </p>
-                     <p class="wiev">
-                       <a href="#">1.2M Wievs</a>
-                       <span class="lnr wiev-icon"></span>
-                     </p>
-                     <p class="comment">
-                       <a href="#">10 Comments</a>
-                       <span class="lnr comment-icon"></span>
-                     </p>
-                   </div>
-                 </div>
-                 <div class="img-with-description">
-                   <div class="img-feature">
-                     <img
-                       src="assets/img/feature-img1.jpg.webp"
-                       alt="img-feature"
-                     />
-                   </div>
-                   <a class="img-posts-title" href="#">
-                     <h3>Astronomy Binoculars A Great Alternative</h3>
-                   </a>
-                   <p class="img-posts">
-                     MCSE boot camps have its supporters and its detractors. Some
-                     people do not understand why you should have to spend money
-                     on boot camp when you can get the MCSE study materials
-                     yourself at a fraction.
-                   </p>
-                   <a href="#" class="primary-btn">View More</a>
-                 </div>
-                 </div>
-
-                 <div class="cards">
-                  <div class="left-area">
-                 <ul class="tags">
-                   <li>
-                     <a href="#">Food,</a>
-                   </li>
-                   <li>
-                     <a href="#">Technology,</a>
-                   </li>
-                   <li>
-                     <a href="#">Politics,</a>
-                   </li>
-                   <li>
-                     <a href="#">Lifestyle</a>
-                   </li>
-                 </ul>
-
-                 <div class="user-details-row">
-                   <p class="user-name">
-                     <a href="#">Mark Wiens</a>
-                     <i class="las la-user"></i>
-                   </p>
-                   <p class="date">
-                     <a href="#">01 Jun, 2021</a>
-                     <span class="lnr date-icon"></span>
-                   </p>
-                   <p class="wiev">
-                     <a href="#">1.2M Wievs</a>
-                     <span class="lnr wiev-icon"></span>
-                   </p>
-                   <p class="comment">
-                     <a href="#">10 Comments</a>
-                     <span class="lnr comment-icon"></span>
-                   </p>
-                 </div>
-               </div>
-               <div class="img-with-description">
-                 <div class="img-feature">
-                   <img
-                     src="assets/img/feature-img1.jpg.webp"
-                     alt="img-feature"
-                   />
-                 </div>
-                 <a class="img-posts-title" href="#">
-                   <h3>Astronomy Binoculars A Great Alternative</h3>
-                 </a>
-                 <p class="img-posts">
-                   MCSE boot camps have its supporters and its detractors. Some
-                   people do not understand why you should have to spend money
-                   on boot camp when you can get the MCSE study materials
-                   yourself at a fraction.
-                 </p>
-                 <a href="#" class="primary-btn">View More</a>
-               </div>
-               </div>
-              </div>
+                      <ul class="tags">
+                        <li>
+                          <a href="#">Food,</a>
+                        </li>
+                        <li>
+                          <a href="#">Technology,</a>
+                        </li>
+                        <li>
+                          <a href="#">Politics,</a>
+                        </li>
+                        <li>
+                          <a href="#">Lifestyle</a>
+                        </li>
+                      </ul>
+  
+                      <div class="user-details-row">
+                        <p class="user-name">
+                          <a href="#">Mark Wiens</a>
+                          <i class="las la-user"></i>
+                        </p>
+                        <p class="date">
+                          <a href="#">01 Jun, 2021</a>
+                          <span class="lnr date-icon"></span>
+                        </p>
+                        <p class="wiev">
+                          <a href="#">1.2M Wievs</a>
+                          <span class="lnr wiev-icon"></span>
+                        </p>
+                        <p class="comment">
+                          <a href="#">10 Comments</a>
+                          <span class="lnr comment-icon"></span>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="img-with-description">
+                      <div class="img-feature">
+                        <img src="assets/img/feature-img1.jpg.webp" alt="img-feature" />
+                      </div>
+                      <a class="img-posts-title" href="#">
+                        <h3>Astronomy Binoculars A Great Alternative</h3>
+                      </a>
+                      <p class="img-posts">
+                        MCSE boot camps have its supporters and its detractors. Some
+                        people do not understand why you should have to spend money
+                        on boot camp when you can get the MCSE study materials
+                        yourself at a fraction.
+                      </p>
+                      <a href="#" class="primary-btn">View More</a>
+                    </div>
+                  </div>
+  
+                  <div class="cards">
+                    <div class="left-area">
+                      <ul class="tags">
+                        <li>
+                          <a href="#">Food,</a>
+                        </li>
+                        <li>
+                          <a href="#">Technology,</a>
+                        </li>
+                        <li>
+                          <a href="#">Politics,</a>
+                        </li>
+                        <li>
+                          <a href="#">Lifestyle</a>
+                        </li>
+                      </ul>
+  
+                      <div class="user-details-row">
+                        <p class="user-name">
+                          <a href="#">Mark Wiens</a>
+                          <i class="las la-user"></i>
+                        </p>
+                        <p class="date">
+                          <a href="#">01 Jun, 2021</a>
+                          <span class="lnr date-icon"></span>
+                        </p>
+                        <p class="wiev">
+                          <a href="#">1.2M Wievs</a>
+                          <span class="lnr wiev-icon"></span>
+                        </p>
+                        <p class="comment">
+                          <a href="#">10 Comments</a>
+                          <span class="lnr comment-icon"></span>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="img-with-description">
+                      <div class="img-feature">
+                        <img src="assets/img/feature-img1.jpg.webp" alt="img-feature" />
+                      </div>
+                      <a class="img-posts-title" href="#">
+                        <h3>Astronomy Binoculars A Great Alternative</h3>
+                      </a>
+                      <p class="img-posts">
+                        MCSE boot camps have its supporters and its detractors. Some
+                        people do not understand why you should have to spend money
+                        on boot camp when you can get the MCSE study materials
+                        yourself at a fraction.
+                      </p>
+                      <a href="#" class="primary-btn">View More</a>
+                    </div>
+                  </div>
+                </div>
+  
                 
-
-              <div class="right-area">
-                <div class="right-area-all">
-                  <div class="search-area">
-                    <form action="search-form">
-                      <input
-                        placeholder="Search Posts"
-                        name="search"
-                        type="text"
-                      />
-                      <button type="submit">
-                        <i class="las la-search"></i>
-                      </button>
-                    </form>
-                  </div>
-                  <div class="user-info-widget">
-                    <img src="assets/img/user-info.png.webp" alt="" />
-                    <a href="#">
-                      <h4>CHarlie Barber</h4>
-                    </a>
-                    <p>Senior blog writer</p>
-                    <ul class="social-link">
-                      <li>
-                        <a href="#">
-                          <i class="lab la-facebook-f"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-twitter"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-github"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-behance"></i>
-                        </a>
-                      </li>
-                    </ul>
-                    <p>
-                      Boot camps have its supporters andit sdetractors. Some
-                      people do not understand why you should have to spend
-                      money on boot camp when you can get. Boot camps have
-                      itssuppor ters andits detractors.
-                    </p>
-                  </div>
-                </div>
-                <div class="right-area-all">
-                  <div class="search-area">
-                    <form action="search-form">
-                      <input
-                        placeholder="Search Posts"
-                        name="search"
-                        type="text"
-                      />
-                      <button type="submit">
-                        <i class="las la-search"></i>
-                      </button>
-                    </form>
-                  </div>
-                  <div class="user-info-widget">
-                    <img src="assets/img/user-info.png.webp" alt="" />
-                    <a href="#">
-                      <h4>CHarlie Barber</h4>
-                    </a>
-                    <p>Senior blog writer</p>
-                    <ul class="social-link">
-                      <li>
-                        <a href="#">
-                          <i class="lab la-facebook-f"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-twitter"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-github"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="lab la-behance"></i>
-                        </a>
-                      </li>
-                    </ul>
-                    <p>
-                      Boot camps have its supporters andit sdetractors. Some
-                      people do not understand why you should have to spend
-                      money on boot camp when you can get. Boot camps have
-                      itssuppor ters andits detractors.
-                    </p>
-                  </div>
-                </div>
               </div>
+              <div class="right-area">
+                  <div class="right-area-all">
+                    <div class="search-area">
+                      <form action="search-form">
+                        <input placeholder="Search Posts" name="search" type="text" />
+                        <button type="submit">
+                          <i class="las la-search"></i>
+                        </button>
+                      </form>
+                    </div>
+                    <div class="user-info-widget">
+                      <img src="assets/img/user-info.png.webp" alt="" />
+                      <a href="#">
+                        <h4>CHarlie Barber</h4>
+                      </a>
+                      <p>Senior blog writer</p>
+                      <ul class="social-link">
+                        <li>
+                          <a href="#">
+                            <i class="lab la-facebook-f"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-github"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-behance"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>
+                        Boot camps have its supporters andit sdetractors. Some
+                        people do not understand why you should have to spend
+                        money on boot camp when you can get. Boot camps have
+                        itssuppor ters andits detractors.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="right-area-all">
+                    <div class="search-area">
+                      <form action="search-form">
+                        <input placeholder="Search Posts" name="search" type="text" />
+                        <button type="submit">
+                          <i class="las la-search"></i>
+                        </button>
+                      </form>
+                    </div>
+                    <div class="user-info-widget">
+                      <img src="assets/img/user-info.png.webp" alt="" />
+                      <a href="#">
+                        <h4>CHarlie Barber</h4>
+                      </a>
+                      <p>Senior blog writer</p>
+                      <ul class="social-link">
+                        <li>
+                          <a href="#">
+                            <i class="lab la-facebook-f"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-twitter"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-github"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="lab la-behance"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p>
+                        Boot camps have its supporters andit sdetractors. Some
+                        people do not understand why you should have to spend
+                        money on boot camp when you can get. Boot camps have
+                        itssuppor ters andits detractors.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+            </div>
           </div>
         </div>
       </div>
-      </div>
-      </div>
     </section>
   </body>
-</html>
+  
+  </html>
